Tritao: Sandbox has code optimizations.